gitops/production/apps/pgadmin/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: pgadmin
  namespace: bminfo
spec:
  selector:
    app.kubernetes.io/name: pgadmin
  ports:
  - name: p80-tcp
    port: 80
    targetPort: 80
    protocol: TCP
  - name: p443-tcp
    port: 443
    targetPort: 443
    protocol: TCP
