gitops/production/apps/pgadmin/route-0.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: pgadmin-bm-pgadmin
  namespace: bminfo
spec:
  entryPoints:
  - websecure
  routes:
  - kind: Rule
    match: Host(`bminfo-admin.ea7klk.es`)
    services:
    - name: pgadmin
      port: 80
  tls:
    certResolver: acmeresolver
